[gd_scene format=3 uid="uid://6jilea2pwjuk"]

[ext_resource type="Script" uid="uid://btcbqlbdorxfs" path="res://UI/Dialogs/EditPaletteDialog.gd" id="2"]
[ext_resource type="PackedScene" uid="uid://bu5avn6ltdgu1" path="res://UI/Components/PaletteButton.tscn" id="3"]

[sub_resource type="StyleBoxFlat" id="1"]
bg_color = Color(0.270588, 0.27451, 0.294118, 1)
expand_margin_left = 1.0
expand_margin_right = 1.0

[sub_resource type="StyleBoxEmpty" id="2"]

[node name="EditPaletteDialog" type="MarginContainer" unique_id=1215823302 node_paths=PackedStringArray("_name_line_edit", "_color_picker", "_color_grid")]
offset_right = 486.0
offset_bottom = 495.0
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12
script = ExtResource("2")
_name_line_edit = NodePath("HBoxContainer/VBoxContainer/NameLineEdit")
_color_picker = NodePath("HBoxContainer/ColorPicker")
_color_grid = NodePath("HBoxContainer/VBoxContainer/ColorGrid")

[node name="HBoxContainer" type="HBoxContainer" parent="." unique_id=834559977]
layout_mode = 2
theme_override_constants/separation = 12

[node name="ColorPicker" type="ColorPicker" parent="HBoxContainer" unique_id=882665032]
layout_mode = 2
edit_alpha = false
presets_visible = false

[node name="VSeparator" type="VSeparator" parent="HBoxContainer" unique_id=1657300219]
layout_mode = 2
theme_override_styles/separator = SubResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer" unique_id=981131576]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 6

[node name="NameLineEdit" type="LineEdit" parent="HBoxContainer/VBoxContainer" unique_id=897998321]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="HBoxContainer/VBoxContainer" unique_id=1210564610]
layout_mode = 2
theme_override_styles/separator = SubResource("2")

[node name="ColorGrid" type="GridContainer" parent="HBoxContainer/VBoxContainer" unique_id=1869526039]
layout_mode = 2
size_flags_vertical = 3
columns = 4

[node name="PaletteButton" parent="HBoxContainer/VBoxContainer/ColorGrid" unique_id=1116091436 instance=ExtResource("3")]
layout_mode = 2

[node name="PaletteButton2" parent="HBoxContainer/VBoxContainer/ColorGrid" unique_id=905553253 instance=ExtResource("3")]
layout_mode = 2

[node name="PaletteButton3" parent="HBoxContainer/VBoxContainer/ColorGrid" unique_id=341944112 instance=ExtResource("3")]
layout_mode = 2

[node name="PaletteButton4" parent="HBoxContainer/VBoxContainer/ColorGrid" unique_id=1573640817 instance=ExtResource("3")]
layout_mode = 2

[node name="PaletteButton5" parent="HBoxContainer/VBoxContainer/ColorGrid" unique_id=274039456 instance=ExtResource("3")]
layout_mode = 2

[node name="PaletteButton6" parent="HBoxContainer/VBoxContainer/ColorGrid" unique_id=163886183 instance=ExtResource("3")]
layout_mode = 2

[node name="PaletteButton7" parent="HBoxContainer/VBoxContainer/ColorGrid" unique_id=658261446 instance=ExtResource("3")]
layout_mode = 2

[node name="PaletteButton8" parent="HBoxContainer/VBoxContainer/ColorGrid" unique_id=1741426190 instance=ExtResource("3")]
layout_mode = 2

[node name="PaletteButton9" parent="HBoxContainer/VBoxContainer/ColorGrid" unique_id=1054881175 instance=ExtResource("3")]
layout_mode = 2

[node name="PaletteButton10" parent="HBoxContainer/VBoxContainer/ColorGrid" unique_id=22254646 instance=ExtResource("3")]
layout_mode = 2

[node name="PaletteButton11" parent="HBoxContainer/VBoxContainer/ColorGrid" unique_id=708017267 instance=ExtResource("3")]
layout_mode = 2

[node name="PaletteButton12" parent="HBoxContainer/VBoxContainer/ColorGrid" unique_id=1294990289 instance=ExtResource("3")]
layout_mode = 2

[node name="PaletteButton13" parent="HBoxContainer/VBoxContainer/ColorGrid" unique_id=310181931 instance=ExtResource("3")]
layout_mode = 2

[node name="PaletteButton14" parent="HBoxContainer/VBoxContainer/ColorGrid" unique_id=1996699507 instance=ExtResource("3")]
layout_mode = 2

[node name="PaletteButton15" parent="HBoxContainer/VBoxContainer/ColorGrid" unique_id=1571799579 instance=ExtResource("3")]
layout_mode = 2

[node name="PaletteButton16" parent="HBoxContainer/VBoxContainer/ColorGrid" unique_id=497632159 instance=ExtResource("3")]
layout_mode = 2

[node name="PaletteButton17" parent="HBoxContainer/VBoxContainer/ColorGrid" unique_id=1008632070 instance=ExtResource("3")]
layout_mode = 2

[node name="PaletteButton18" parent="HBoxContainer/VBoxContainer/ColorGrid" unique_id=1745351764 instance=ExtResource("3")]
layout_mode = 2

[node name="PaletteButton19" parent="HBoxContainer/VBoxContainer/ColorGrid" unique_id=2012447138 instance=ExtResource("3")]
layout_mode = 2

[node name="PaletteButton20" parent="HBoxContainer/VBoxContainer/ColorGrid" unique_id=1187613749 instance=ExtResource("3")]
layout_mode = 2

[node name="PaletteButton21" parent="HBoxContainer/VBoxContainer/ColorGrid" unique_id=1977249209 instance=ExtResource("3")]
layout_mode = 2

[node name="PaletteButton22" parent="HBoxContainer/VBoxContainer/ColorGrid" unique_id=1425012232 instance=ExtResource("3")]
layout_mode = 2

[node name="PaletteButton23" parent="HBoxContainer/VBoxContainer/ColorGrid" unique_id=477514756 instance=ExtResource("3")]
layout_mode = 2

[node name="PaletteButton24" parent="HBoxContainer/VBoxContainer/ColorGrid" unique_id=1644126283 instance=ExtResource("3")]
layout_mode = 2

[node name="AddColorButton" type="Button" parent="HBoxContainer/VBoxContainer" unique_id=895628535]
layout_mode = 2
text = "Add Color"

[node name="RemoveColorButton" type="Button" parent="HBoxContainer/VBoxContainer" unique_id=258987618]
layout_mode = 2
text = "Remove Color"

[connection signal="color_changed" from="HBoxContainer/ColorPicker" to="." method="_on_color_picker_color_changed"]
[connection signal="text_changed" from="HBoxContainer/VBoxContainer/NameLineEdit" to="." method="_on_name_line_edit_text_changed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/AddColorButton" to="." method="_on_add_color_button_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/RemoveColorButton" to="." method="_on_remove_color_button_pressed"]
